[BB-1505] Fix timer text wrapping on smaller screens

--- a/lms/static/sass/course/layout/_courseware_preview.scss
+++ b/lms/static/sass/course/layout/_courseware_preview.scss
@@ -76,7 +76,10 @@
 
     .exam-text {
       display: inline-block;
-      width: calc(100% - 250px);
+
+      @media(min-width: 768px) {
+        width: calc(100% - 250px);
+      }
     }
 
     a {
